# epitech-semester3

./: README.md
2020FICTION2/: Fiction2-sitpi-kevin.rajendran.docx
ASM/: main.c  main_test.c
ASM/ASM_minilibc_2019/: Makefile
ASM/ASM_minilibc_2019/src/: memcpy.asm  memmove.asm  memset.asm  rindex.asm  strcasecmp.asm  (+7 more)
B4/B4BILAN/: B4-PP-Bilan-Sitpi-kevin.rajendran-Paris.docx
B4/B4DIAPO/: B4-Diaporama-sitpi-kevin.rajendran.pptx
B4/B4RECADRER/: B4-P1-recadrer-sitpi-kevin.rajendran-Paris.docx
CNA/CNA_groundhog_2019/: Makefile
CppPool/: a.out  create.sh  prepare_my_repo.sh
CppPool/cpp_d02a_2019/: btree_first.c  btree_second.c  double_list.c  double_list_next.c  double_list_next2.c  generic_list.c  generic_list_next.c  generic_list_next2.c  queue.c
CppPool/cpp_d03_2019/: Makefile  main.c  string.c  string.h  string_next.c  string_next2.c  string_next3.c
CppPool/cpp_d09_2019/: Character.cpp  Character.hpp  Mage.cpp  Priest.cpp  Warrior.cpp  Warrior.hpp  a.out  ex00.c  ex00.h  main.cpp
CppPool/cpp_rush1_2019/: char.c  float.c  int.c  new.c  point.c  vertex.c
CppPool/cpp_rush2_2019/: Box.cpp  Box.hpp  ConveyorBelt.cpp  ConveyorBelt.hpp  Elf.cpp  Elf.hpp  GiftPaper.cpp  GiftPaper.hpp  Hand.cpp  Hand.hpp  IConveyorBelt.cpp  IConveyorBelt.hpp  IElf.cpp  IElf.hpp  ITable.cpp  ITable.hpp  LittlePony.cpp  LittlePony.hpp  Makefile  Object.cpp  Object.hpp  PapaXmasConveyorBelt.cpp  PapaXmasConveyorBelt.hpp  PapaXmasTable.cpp  PapaXmasTable.hpp  Table.cpp  Table.hpp  Teddy.cpp  Teddy.hpp  Toy.cpp  Toy.hpp  Wrap.cpp  Wrap.hpp  a.out  main.c  main2.cpp
CppPool/cpp_rush3_2019/: Makefile  MyGKrellm
CppPool/give_up/: SickKoalaList.cpp  SickKoalaList.hpp
CppPool/gived_files/: Makefile copy
CppPool/tests/: tests.cpp
Haskell/FUN_imageCompressor_2019/: Makefile  example  package.yaml
Haskell/FUN_wolfram_2019/: Makefile  wolframtest
Haskell/bootstrap/: argsTest  argsTest.hi  argsTest.hs  myAbs.hs  myElem.hs  myIsNeg.hs  myMax.hs  myMin.hs  mySucc.hs
NWP/: myteams_cli
NWP/NWP_myftp_2019/: Makefile
NWP/NWP_myteams_2019/: Makefile  my_teams-docECP.txt
NWP/bootstrap_myftp/: client  client.c  server  server.c
OOP/OOP_arcade_2019/: Makefile
OOP/OOP_arcade_2019 (copy)/: A FAIRE  Makefile
OOP/OOP_indie_studio_2019/: CMakeLists.txt
OOP/OOP_indie_studio_2019/Class/Bombs/: Bomb.hpp  BombList.hpp  Laser.hpp
OOP/OOP_indie_studio_2019/Class/ErrorHandler/: ErrorHandling.hpp
OOP/OOP_indie_studio_2019/Class/Events/: MyEventReceiver.hpp  MyRemoteControler.hpp
OOP/OOP_indie_studio_2019/Class/Game/: Components.hpp  CoreGame.hpp  Power.hpp  Stat.hpp  manager.h
OOP/OOP_indie_studio_2019/Class/Graphics/: Particle.hpp  SNAnimator.hpp  SoundEffect.hpp  WindowHandler.hpp
OOP/OOP_indie_studio_2019/Class/Map/: MapGenerator.hpp  MapHandler.hpp  Maper.hpp  PathFinder.hpp  Wall.hpp
OOP/OOP_indie_studio_2019/Class/Menu/: Menu.hpp  MenuChooseMulti.hpp  MenuEndGame.hpp  MenuEventReceiver.hpp  OptionMenu.hpp  VMenu.hpp
OOP/OOP_indie_studio_2019/Class/Player/: Bot.hpp  Character.hpp  MyPerso.hpp
OOP/OOP_indie_studio_2019/Class/System/: System.hpp
OOP/OOP_indie_studio_2019/Class/TitleScreen/: TitleScreen.hpp  TitleScreenEventReceiver.hpp
OOP/OOP_indie_studio_2019/include/: Irrlicht.hpp
OOP/OOP_indie_studio_2019/resources/powerUp/: 9mm.mtl
OOP/OOP_indie_studio_2019/src/: main.cpp
OOP/OOP_indie_studio_2019/src/Bombs/: Bomb.cpp  BombList.cpp  Laser.cpp
OOP/OOP_indie_studio_2019/src/Event/: MyEventReceiver.cpp  MyRemoteControler.cpp
OOP/OOP_indie_studio_2019/src/Game/: #CoreGame.cpp#  CoreGame.cpp  Stat.cpp
OOP/OOP_indie_studio_2019/src/Graphics/: Components.cpp  Particle.cpp  SNAnimator.cpp  SoundEffect.cpp  WindowHandler.cpp
OOP/OOP_indie_studio_2019/src/Map/: MapGenerator.cpp  MapHandler.cpp  Mapper.cpp  PathFinder.cpp  Wall.cpp
OOP/OOP_indie_studio_2019/src/Menu/: Menu.cpp  MenuChooseMulti.cpp  MenuEndGame.cpp  MenuEventReceiver.cpp  OptionMenu.cpp  VMenu.cpp
OOP/OOP_indie_studio_2019/src/Player/: Bot  Bot.cpp  Character.cpp  MyPerso.cpp  Power.cpp
OOP/OOP_indie_studio_2019/src/System/: ErrorHandling.cpp  System.cpp
OOP/OOP_indie_studio_2019/src/TitleScreen/: TitleScreen.cpp  TitleScreenEventReceiver.cpp
OOP/OOP_nanotekspice_2019/: Component.cpp  Component.hpp  Makefile
OOP/bootstrap_NanoTekSpice/: Component.hpp  table
PSU/PSU_2019_malloc/: Makefile
PSU/PSU_nmobjdump_2019/: Makefile
PSU/boostrap_objdump/: a.out  nm.c
PSU/bootstrap_malloc/: a.out  foo.c  main.c
PSU/malloc3/: Makefile
StartingS4/projectweek_2019/: Accroche.txt
(+399 files in other folders)
